<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tv1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        />

    <FrameLayout
        android:id="@+id/cajaColor"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv1"
        >

    </FrameLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:background="@drawable/fondo_btn1_btn2"
        app:backgroundTint="@null"
        android:layout_below="@id/cajaColor"
        >

    </Button>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/tv2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:layout_below="@id/btn1"
        />


</RelativeLayout>